# wcc26_feistel_structures

./: README.md  good_sets.py  pyproject.toml
sage_scripts/: commutative.py  discussion.py  good_sets.py  invariants.py
